Fix issue with sheen not clipping properly on google

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -36,6 +36,7 @@
   );
   background-size: 600px 100%;
   background-clip: text;
+  -webkit-background-clip: text;
 }
 
 nav {
